--- a/Kconfig
+++ b/Kconfig
@@ -1,5 +1,5 @@
 config VDFS4_FS
-	tristate "Samsung VDFS4 file system support (EXPERIMENTAL)"
+	tristate "Samsung VDFS4 file system"
 	depends on BLOCK
 	select NLS
 	select CRC32
@@ -14,7 +14,7 @@ config VDFS4_FS
 	  If unsure, say N.
 
 config VDFS4_POSIX_ACL
-	bool "Support of Posix ACL"
+	bool "VDFS4 Access Control Lists"
 	depends on VDFS4_FS
 	select FS_POSIX_ACL
 	help
@@ -22,137 +22,122 @@ config VDFS4_POSIX_ACL
 	  groups beyond the owner/group/world scheme. See man 5 acl for details.
 
 config VDFS4_DEBUG
-	bool "Debug VDFS4"
+	bool "VDFS4 debug support"
 	depends on VDFS4_FS
+	default n
 	help
-	  If you say Y here, you can use the 'debug' mount option to enable
-	  debugging output from the driver.
-
+	  If you say Y here,
+	     you can use the 'debug' mount option to enable debugging output.
 	  If unsure, say N.
+	  (unchecking VDFS4 debug&perf support means release mode)
+
+config VDFS4_PERF
+	bool "VDFS4 perf support"
+	depends on VDFS4_FS && !VDFS4_DEBUG
+	default n
+	help
+	  If you say Y here,
+	     you can use some vdfs4 features without effect performance.
+	  If unsure, say N.
+	  (unchecking VDFS4 debug&perf support means release mode)
 
 config VDFS4_PANIC_ON_ERROR
-	bool "Force kernel panic after fatal errors"
+	bool "force kernel panic on fatal errors"
 	depends on VDFS4_FS
+	depends on VDFS4_DEBUG
 	default y
 	help
 	  If you say Y here first disk error or metadata corruption will cause
-	  kernel panic. This mode should be used in release builds.
+	  kernel panic. This mode is useful for testing.
 
 	  Otherwise filesystem will be automatically remounted into read-only
 	  mode for preventing further corruption, after that it hopefully can
 	  be unmounted without crashing whole kernel. All unwritten data will
-	  be lost. This mode is useful for testing.
-
-config VDFS4_NOOPTIMIZE
-	bool "Disable build optimization for VDFS4"
-	depends on VDFS4_FS
-	help
-	  If you say Y here, VDFS4 will be built with -O0 opt. Useful for
-	  gdb debug;
-
-	  If unsure, say N.
-
-config VDFS4_STATISTIC
-	bool "Umount statistic"
-	depends on VDFS4_FS
-	help
-	  This feature allows to count amount of data writen to block
-	  device during umount operation. At the end of umount, it
-	  displays a message with appropriate value.
-
-	  If unsure, say N.
-
-config VDFS4_CRC_CHECK
-	bool "VDFS4 CRC check"
-	depends on VDFS4_FS
-	help
-		Enables CRC check for VDFS4 metadata
-
-		If unsure, say N.
+	  be lost.
 
 config VDFS4_META_SANITY_CHECK
-        bool "VDFS4 metadata sanity check"
-        depends on VDFS4_FS
-        help
-                This feature adds additional checks for VDFS4 metadata,
-		to find metadata corruption on early stage, and prevent
-		writing incorrect data to flash.
+	bool "VDFS4 metadata sanity check"
+	depends on VDFS4_FS
+	help
+	  This feature adds additional checks for VDFS4 metadata,
+	  to find metadata corruption on early stage, and prevent
+	  writing incorrect data to flash.
+	  Enable CRC check for metadata, as well.
 
-                If unsure, say N.
+	  If unsure, say N.
 
 config VDFS4_HW_DECOMPRESS_SUPPORT
-	bool "Use HW API to decompress user data from compressed files"
+	bool "VDFS4 H/W decompressor support"
 	depends on HW_DECOMPRESSOR
+	depends on HW_DECOMP_BLK_MMC_SUBSYSTEM
 	depends on VDFS4_FS
 	depends on MMC
-
 	help
+	  Use HW API to decompress user data from compressed files.
 	  Utilize hardware decompressor to decompress packed user data from
 	  compressed vdfs files.
+	  The hardware decompressor is embedded into the MMC layer.
 
-config VDFS4_USE_HW1_DECOMPRESS
-	bool "Use HW1 API to decompress user data from compressed files"
-	depends on VDFS4_HW_DECOMPRESS_SUPPORT
-
-	help
-	  Utilize hardware decompressor (hw1)to decompress packed user data from
-	  compressed vdfs files.
-
-config VDFS4_USE_HW2_DECOMPRESS
-	bool "Use HW2 API to decompress user data from compressed files"
-	help
-	  Use embedded into block layer decompression, whenever is possible
-	depends on HW_DECOMP_BLK_MMC_SUBSYSTEM
-	depends on VDFS4_HW_DECOMPRESS_SUPPORT
-	depends on VDFS4_FS
-	depends on MMC
-
-	help
-	  Utilize hardware decompressor to decompress embedded into the MMC
-	  layer.
-
-config VDFS4_RETRY
-	bool "Enable/disable retry decompression and authentication"
-	depends on VDFS4_FS
-	help
-		In case of unsuccessfull decompresssion/authentication retry to
-		decompress/authenticate	data 3 times till successfull result;
-
-		If unsure, say N.
-
-config VDFS4_DATA_AUTHENTICATION
-	bool "User data and vdfs4 meta authentication"
+config VDFS4_AUTHENTICATION
+	bool "VDFS4 Authentication"
 	depends on VDFS4_FS
 	select MPILIB
+	select VDFS4_META_SANITY_CHECK
+	default y
 	help
-		Protect the vdfs4 superblock, file-based meta data and compressed chunks
-		by digital signature. The VDFS4 uses SHA1+RSA2048 algorithms to
-		calculate the digital signatures;
-
-config VDFS4_EXEC_ONLY_AUTHENTICATED
-	bool "Execute and read only signed binaries and files"
-	depends on VDFS4_FS
-	depends on VDFS4_DATA_AUTHENTICATION
-	help
-		If the option is set only authenticated binary can be run. The vdfs4
-		checks for inode flag, if the flag is set it allows to do mmap with
-		VM_EXEC bit set and do not clear VM_MAYEXEC on vma
+	  Protect the vdfs4 superblock, meta, file-based meta and compressed
+	  chunks by digital signature. The VDFS4 uses several algorithms to
+	  calculate the digital signatures;
+	  If the option is set, bnode & exsb meta modification is detected for
+	  non dncs partition.
+	  If the option is set only authenticated binary can be run. The vdfs4
+	  checks for inode flag, if the flag is set it allows to do mmap with
+	  VM_EXEC bit set and do not clear VM_MAYEXEC on vma
 
 config VDFS4_DEBUG_AUTHENTICAION
-	depends on VDFS4_DATA_AUTHENTICATION
-	depends on !VD_RELEASE || VD_PERFORMANCE_MODE 
-	bool "if enable - do not return an error if authenticaion is failed."
+	depends on VDFS4_AUTHENTICATION
+	bool "Do not return an error if authenticaion is failed."
 	help
-		if enable - if authentication is enabled do not return an error
-		and print error message
-		if diable - if return an error if authenticaion is failed
+	default n
+	  if enable - if authentication is enabled do not return an error
+	  and print error message. Use public key of "debug, perf".
+	  if disable - if return an error if authenticaion is failed. Use
+	  public key of "product"
+
+config VDFS4_ALLOW_LEGACY_SIGN
+	depends on VDFS4_AUTHENTICATION
+	bool "Allow mounting of partitions with RSA1024 signature"
+	default y
+
+config VDFS4_SQUEEZE
+	depends on VDFS4_FS
+	bool "VDFS4 Squeeze"
 	default n
 
-config VDFS4_PRINT_DIRTY_FILES
-       bool "Show path to dirty files at power-off"
-       depends on PRINT_DIRTY_PAGES
-       help
-         If you want to get a list of dirty files on power off, select this
-         item.
+config VDFS4_SQUEEZE_PROFILING
+	depends on VDFS4_SQUEEZE
+	bool "VDFS4 Squeeze - Perform profiling"
+	default n
 
+config VDFS4_SQUEEZE_PROFILING_PARTITION
+	depends on VDFS4_SQUEEZE_PROFILING
+	string "Profiling partition"
+	default "mmcblk0p18"
 
+config VDFS4_TRACE
+	depends on VDFS4_FS
+	depends on (VDFS4_DEBUG || VDFS4_PERF)
+	bool "VDFS4 IO tracer"
+	default n
+	help
+	  This is an option for use by developer.
+	  This record each i/o requirement of fs layer and dump.
+
+config VDFS4_LOCK_TRACE
+	depends on VDFS4_FS
+	depends on (VDFS4_DEBUG || VDFS4_PERF)
+	bool "VDFS4 Lock tracer"
+	default n
+	help
+	  This is an option for develop mode.
+	  This option support lock trace in vdfs4.
